@@ -3,11 +3,6 @@ TODO:
 
 - Instead of copying each file from static, just copy all static directory content (cp static/* ./pub)
 - Instead of copying each file given in THEME_STATIC_FILES, just copy those given in template/theme_name/static directory
-- Create a [b|p]make backup to save all important files in a 20120822_13H44_makefly_archive.tar.gz (for an example):
-  * makefly.rc
-  * static directory
-  * special directory
-  * db directory
 - Create a list of error that you can encount and give some explanations to fix them
 - Add in doc some explanation on how makefly work for src, db directory and linked files.
 - Only permit to publish current post (if post have a date in the future, so don't take it)
@@ -93,4 +88,9 @@ DONE:
 - Change "github" source link to "gitorious" source link
 - Permit to create more templates with linked CSS
 - Permit THEME_STATIC_FILES to be copied from template/theme to pub directory (from config.mk given on each template
+- Create a [b|p]make backup to save all important files in a 20120822_13H44_makefly_archive.tar.gz (for an example):
+  * makefly.rc
+  * static directory
+  * special directory
+  * db directory
 
